initial implementation of the dig-dug plugin
for discussion

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -111,6 +111,7 @@ if(BUILD_SUPPORTED)
     dfhack_plugin(deramp deramp.cpp)
     dfhack_plugin(debug debug.cpp LINK_LIBRARIES jsoncpp_lib_static)
     dfhack_plugin(dig dig.cpp)
+    dfhack_plugin(dig-dug dig-dug.cpp)
     dfhack_plugin(digFlood digFlood.cpp)
     add_subdirectory(diggingInvaders)
     dfhack_plugin(dwarfvet dwarfvet.cpp)
